[package]
name = "yew-deno"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.22.0", features = ["ssr", "csr", "hydration"] }
yew-router = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"]}
chrono = "0.4"
gray_matter = "0.3.2"
walkdir = "2.5.0"
comrak = "0.50"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0 
debug = 0 
incremental = true
